--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 <body>
   <h1>Austin Parah</h1>
+  <p>
+    we love making pointless changes for practice for a system I allready know
+  </p>
 </body>
 
 </html>
