added old protoype to files, also simple nav

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
   <h1>Austin Parah</h1>
-  <p>
-    we love making pointless changes for practice for a system I allready know
-  </p>
+  <ul>
+    <li><a href="prototype/index.html">Prototype</a></li>
+  </ul>
 </body>
 
 </html>
