--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <title>IFSC 11003 | Austin Parah</title>
   <meta name="description" content="Keyword Rich Description">
   <meta name="author" content="Austin Parah">
-
+    <link href="assets/css/style.css" rel="stylesheet"/>
 </head>
 
 <body>
   <h1>Austin Parah</h1>
   <ul>
+    <li><a href="example/index.html">Example</a></li>
     <li><a href="prototype/index.html">Prototype</a></li>
+    <li><a href="css-demo/index.html">css-demo<a></li>
   </ul>
 </body>
 
